# etr_case_generator

./: .gitignore  README.md  checking_format.py  etr_case_generator.py  etr_v0__2024_10_29.json  extract_test_control_accuracy.ipynb  generate_cases.ipynb  generate_cases.py  generate_cases_from_fol.ipynb  generate_etr_dataset.py  generate_fol_strings.py  generate_stochastic_cases.ipynb  keys.env.template  output.json  output_2.jsonl  pure_string_parsing.ipynb  pyproject.toml  qa.ipynb  requirements.txt  test.ipynb  test.py
datasets/: 250524_multiple_choice.jsonl  250524_open_ended_with_cot.jsonl  250524_yes_no.jsonl  250524_yes_no_with_cot.jsonl  3_queue_iteration_require_nonempty_conclusion.jsonl  4_asdf.jsonl  balance_atoms_multiple_choice.jsonl  dev_multiple_choice.jsonl  dev_open_ended.jsonl  dev_yes_no.jsonl  disjunction_premise_order_50_yes_no.jsonl  disjunction_with_control_100_open_ended_with_cot.jsonl  etr_for_lm_eval.jsonl  examples_etr_english.txt  fully_balanced_yes_no.jsonl  largeset_open_ended.jsonl  largeset_yes_no.jsonl  problems_multiple_choice.jsonl  problems_open_ended.jsonl  problems_yes_no.jsonl  queue_iteration.jsonl  sample_4_pieces_multiple_choice.jsonl  sample_4_pieces_multiple_choice_with_cot.jsonl  sample_4_pieces_open_ended.jsonl  sample_4_pieces_open_ended_with_cot.jsonl  sample_4_pieces_yes_no.jsonl  sample_4_pieces_yes_no_with_cot.jsonl  sample_balanced_dataset.jsonl  smallset_multiple_choice.jsonl  smallset_multiple_choice_with_cot.jsonl  unary_predicate_v1__2024_11_17.jsonl
datasets_invalid/: 250524_multiple_choice_with_cot.jsonl  (+10 more)
(+184 files in other folders)
