[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etr_case_generator"
version = "0.1.0"
description = "ETR Case Generator"
requires-python = ">=3.8"
dependencies = [
    "pysmt",
    "rich"
]

[tool.setuptools]
packages = ["etr_case_generator"]
